packages/react-components/src/components/slider/slider.module.css
@layer components {
  .Slider {
    width: 100%;
    flex-grow: 1;
  }

  .Input {
    --thumb-size: token(--space-24);
    --thumb-radius: token(--radius-8);
    --track-h: token(--space-8);

    position: relative;
    display: flex;
    align-items: center;
    user-select: none;
    touch-action: none;
    cursor: pointer;
    font-variant-numeric: tabular-nums;
    flex-grow: 1;

    &[data-orientation='horizontal'] {
      block-size: token(--space-24);
    }

    &[data-orientation='vertical'] {
      flex-direction: column;
      inline-size: token(--space-24);
      block-size: 100%;
      min-block-size: 8rem;
    }

    &[data-disabled] {
      cursor: not-allowed;
    }
  }

  .Track {
    box-shadow: 0 0 0 1px var(--global-background), inset 0 0 0 1px var(--dimmed-2);
    position: relative;
    flex-grow: 1;
    border-radius: token(--radius-full);
    overflow: hidden;
    backdrop-filter: brightness(1.35);

    &[data-orientation='horizontal'] {
      block-size: var(--track-h);
    }

    &[data-orientation='vertical'] {
      inline-size: var(--track-h);
    }

    &[data-disabled] {
      background-color: var(--global-disabled-background);
      cursor: not-allowed;
      box-shadow: none;
    }
  }

  .ValueTrack {
    position: absolute;
    background-color: var(--cta-default);

    &[data-disabled] {
      background-color: var(--global-disabled-foreground);
    }

    &[data-orientation='horizontal'] {
      block-size: 100%;
    }

    &[data-orientation='vertical'] {
      inline-size: 100%;
    }
  }

  .Thumb {
    display: block;
    position: relative;
    inline-size: var(--thumb-size);
    block-size: var(--thumb-size);
    background-color: var(--dimmed-0);
    border-radius: var(--thumb-radius);
    border: 2px solid var(--cta-default);

    .Input {
      width: 100%;
    }

    .Input[data-disabled]:has(span > &) & {
      backdrop-filter: blur(token(--vibrancy-blur-strong));
    }

    .Input[data-slider-show-values='true'] &::after {
      content: attr(data-slider-value-label);
      position: absolute;
      white-space: nowrap;
      top: calc(100% + token(--space-8));
      left: 50%;
      transform: translateX(-50%);
      text-align: center;
      font-size: token(--font-size-16);
      color: var(--dimmed-6);
      font-weight: token(--font-weight-bold);
    }

    .Input[data-slider-show-values='true'] &[data-orientation='vertical']::after {
      left: calc(100% + token(--space-8));
      top: 50%;
      transform: translateY(-50%);
    }


    &:hover {
      cursor: grab;
    }

    &:active {
      cursor: grabbing;
    }


    &[data-disabled] {
      background-color: var(--global-disabled-foreground);
      border: 0;
      cursor: not-allowed;
    }
  }
}

